--- a/TypingMaster.html
+++ b/TypingMaster.html
@@ -237,13 +237,12 @@
         let isTyping = false;
 
         const sampleTexts = [
-            "The quick brown fox jumps over the lazy dog.",
-            "To be or not to be, that is the question.",
-            "All that glitters is not gold.",
-            "Practice makes perfect.",
-            "Actions speak louder than words.",
-            "Don't judge a book by its cover."
-        ];
+    "The quick brown fox jumps over the lazy dog. Practice makes perfect.",
+    "To be or not to be, that is the question. All that glitters is not gold.",
+    "Actions speak louder than words. Better late than never.",
+    "Success is not final; failure is not fatal. It is the courage to continue that counts.",
+    "Knowledge is power. With great power comes great responsibility."
+];
 
         function getRandomText() {
             return sampleTexts[Math.floor(Math.random() * sampleTexts.length)];
