--- a/TypingMaster.html
+++ b/TypingMaster.html
@@ -255,12 +255,12 @@
         let startTime, timerInterval;
         let isTyping = false;
 
-        const sampleTexts = [
-    "The quick brown fox jumps over the lazy dog. Practice makes perfect.",
-    "To be or not to be, that is the question. All that glitters is not gold.",
-    "Actions speak louder than words. Better late than never.",
-    "Success is not final; failure is not fatal. It is the courage to continue that counts.",
-    "Knowledge is power. With great power comes great responsibility."
+const sampleTexts = [
+    "The quick brown fox jumps over the lazy dog. Hard work beats talent when talent doesn’t work hard.",
+    "To be or not to be, that is the question. Patience and perseverance can move mountains with the right effort.",
+    "Actions speak louder than words. Never stop learning because life never stops teaching, and knowledge grows with every challenge you face.",
+    "Success is not final; failure is not fatal. Believe in yourself and take risks to achieve your dreams in life.",
+    "Knowledge is power. Small daily improvements over time lead to amazing results; effort and determination pave the path to success."
 ];
 
         function getRandomText() {
